// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Output Tests Action Full Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  id="actionOutput1"
  output={
    Array [
      Object {
        "content": "Lorem ipsum dolor sit amet",
        "type": 0,
      },
    ]
  }
  showIndexes={true}
>
  <div
    className="msg actionOutput"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "gap": "2px",
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "flexDirection": "row",
          "gap": "2px",
        }
      }
    >
      <Label
        caption="Lorem ipsum dolor sit amet"
        className="actionLabel"
        onClick={[Function]}
        style={
          Object {
            "gridColumn": "span 2",
          }
        }
        tabIndex={-1}
        type={0}
      >
        <label
          className="msg label actionLabel"
          data-tooltip="expand"
          onClick={[Function]}
          style={
            Object {
              "gridColumn": "span 2",
            }
          }
          tabIndex={-1}
          type={0}
        >
          Lorem ipsum dolor sit amet
        </label>
      </Label>
    </div>
  </div>
</ActionOutput>
`;

exports[`Action Output Tests Action Full Rendering 2`] = `
HTMLCollection [
  <label
    __self="[object Object]"
    __source="[object Object]"
    class="msg label actionLabel"
    data-tooltip="expand"
    style="grid-column: span 2;"
    tabindex="-1"
    type="4"
  >
    A simple response
  </label>,
]
`;

exports[`Action Output Tests Standard Rendering 1`] = `
<ActionOutput
  contextId="ec123"
  output={Array []}
  showIndexes={false}
>
  <div
    className="msg actionOutput"
    style={
      Object {
        "display": "flex",
        "flexDirection": "column",
        "gap": "2px",
      }
    }
  />
</ActionOutput>
`;
